<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.integratedmodelling</groupId>
	<artifactId>klab</artifactId>
	<version>0.11.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<licenses>
		<license>
			<name>GNU Affero General Public License (AGPL) version 3.0</name>
			<url>http://www.gnu.org/licenses/agpl-3.0.en.html</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Ferdinando Villa</name>
			<email>ferdinando.villa@bc3research.org</email>
			<organization>Basque Centre for Climate Change (BC3); IKERBASQUE, Basque foundation for science</organization>
			<organizationUrl>http://www.bc3research.org</organizationUrl>
		</developer>
		<developer>
			<name>Enrico Girotto</name>
			<email>enrico.girotto@gmail.com</email>
			<organization>Basque Centre for Climate Change (BC3)</organization>
			<organizationUrl>http://www.bc3research.org</organizationUrl>
		</developer>
		<developer>
			<name>Steven Wohl</name>
			<email>steven.wohl@bc3research.org</email>
			<organization>Basque Centre for Climate Change (BC3)</organization>
			<organizationUrl>http://www.bc3research.org</organizationUrl>
		</developer>
		<developer>
			<name>Andrea Antonello</name>
			<email>andrea.antonello@gmail.com</email>
			<organization>HydroloGIS Environmental Engineering</organization>
			<organizationUrl>https://www.hydrologis.com/</organizationUrl>
		</developer>
		<developer>
			<name>J.Luke Scott</name>
			<email>luke@cron.works</email>
			<organization>CronWorks Software, LLC</organization>
			<organizationUrl>http://cronworks.net</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:http://bitbucket.org/integratedmodelling/klab</connection>
		<developerConnection>scm:git:https://bitbucket.org/integratedmodelling/klab</developerConnection>
		<url>https://bitbucket.org/integratedmodelling/klab.git</url>
	</scm>

	<organization>
		<name>integratedmodelling.org</name>
		<url>http://www.integratedmodelling.org</url>
	</organization>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>

	<modules>
		<module>api</module>
		<module>kdl</module>
		<module>kim</module>
		<module>kactors</module>
		<module>klab.engine</module>
		<module>klab.stats</module>
		<module>adapters</module>
		<module>klab.modeler</module>
		<module>client</module>
		<module>klab.tools</module>
		<module>ide</module>
		<module>klab.hub</module>
		<module>klab.node</module>
		<module>products</module>
		<module>components</module>
		<!-- later (requires mvn 3.0.5 which can't be installed on sua) -->
		<!-- <module>docs</module> -->
		<module>authorities</module>
		<module>klab.authentication</module>
		<module>klab.activity</module>
	</modules>

	<properties>

		<klab.version>0.11.0-SNAPSHOT</klab.version>

		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<!-- Careful here: geotools must be right for hortonmachine to work; JTS 
			should be the same one that geotools and HM needs. -->
		<geotools.version>28.0</geotools.version>
		<hortonmachine.version>0.10.8-SNAPSHOT</hortonmachine.version>
		<jts.version>1.18.1</jts.version>
		<h2gis.version>1.5.0</h2gis.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<tycho-version>2.3.0</tycho-version>
		<xtextVersion>2.25.0</xtextVersion>
		<mweVersion>2.12.1</mweVersion>
		<googleJibVersion>3.1.4</googleJibVersion>

		<!-- the five below go together. Never change one without checking the 
			others. Spring security latest is currently requiring 5.0.4, implying boot 
			2.0.0 -->
		<spring-boot.version>2.5.3</spring-boot.version>
		<spring.version>5.3.9</spring.version>
		<spring-security.version>5.5.1</spring-security.version>
		<spring-cloud.version>2020.0.3</spring-cloud.version>
		<junit-version>5.6.3</junit-version>
		<jackson-version>2.12.4</jackson-version>
		<jsonld-java-version>0.13.4</jsonld-java-version>
		<!-- end versions that need to be in lock-step to avoid multiple Spring 
			issues -->

		<!-- <scala.version>2.13.1</scala.version> -->
		<joda-time-version>2.3</joda-time-version>
		<javax.mail-api.version>1.5.2</javax.mail-api.version>
		<jung.version>2.1.1</jung.version>

	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.7.0</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>com.google.cloud.tools</groupId>
					<artifactId>jib-maven-plugin</artifactId>
					<version>${googleJibVersion}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>bundle-dependencies</id>
			<build>
				<directory>${basedir}/bundles</directory>
				<plugins>
					<plugin>
						<groupId>org.apache.felix</groupId>
						<artifactId>maven-bundle-plugin</artifactId>
						<version>2.0.1</version>
						<extensions>true</extensions>
						<executions>
							<execution>
								<id>wrap-dependencies</id>
								<goals>
									<goal>bundleall</goal>
								</goals>
								<configuration>
									<wrapImportPackage>*</wrapImportPackage>
									<instructions>
										<Export-Package>org.integratedmodelling.*</Export-Package>
										<!-- <Bundle-Activator>activator.Activator</Bundle-Activator> -->
										<Embed-Dependency>dependencies</Embed-Dependency>
									</instructions>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.0.0</version>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
							<!-- <excludePackageNames>com.elet.dragonconsole.*:org.integratedmodelling.common.utils.jtopas.*</excludePackageNames> -->
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>2.8.2</version>
						<configuration>
							<skip>true</skip>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.8</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
	<repositories>
		<repository>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>sonatype-nexus-snapshots</id>
			<name>Maven Central snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
	</repositories>
</project>
